<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.1</version>
    </parent>

    <groupId>dev.sobue.slide</groupId>
    <artifactId>markdown-slide</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>markdown-slide</name>
    <description>Markdown Slide Show</description>
    <url>https://github.com/ssobue/markdown-slide</url>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/ssobue/markdown-slide/issues</url>
    </issueManagement>

    <ciManagement>
        <system>CircleCI v2</system>
        <url>https://circleci.com/gh/ssobue/markdown-slide</url>
    </ciManagement>

    <developers>
        <developer>
            <name>Sho SOBUE</name>
            <url>https://github.com/ssobue</url>
        </developer>
    </developers>

    <scm>
        <url>http://github.com/ssobue/markdown-slide</url>
        <connection>scm:git:https://github.com/ssobue/markdown-slide.git</connection>
        <developerConnection>scm:git:ssh://github.com:ssobue/markdown-slide.git
        </developerConnection>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <java.version>11</java.version>
        <!-- for SonarCloud -->
        <sonar.projectKey>ssobue_markdown-slide</sonar.projectKey>
        <sonar.organization>ssobue</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <repositories>
        <repository>
            <id>spring-milestone</id>
            <name>Spring milestone</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestone</id>
            <name>Spring milestone</name>
            <url>https://repo.spring.io/milestone</url>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>circle-ci</id>
            <url>file:///tmp/artifacts</url>
        </repository>
        <snapshotRepository>
            <id>circle-ci-snapshot</id>
            <url>file:///tmp/artifacts</url>
        </snapshotRepository>
        <site>
            <id>circle-ci-site</id>
            <url>file:///tmp/artifacts</url>
        </site>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.experimental</groupId>
            <artifactId>spring-graalvm-native</artifactId>
            <version>0.8.3</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.nativeimage</groupId>
                        <artifactId>native-image-maven-plugin</artifactId>
                        <version>20.3.0</version>
                        <configuration>
                            <mainClass>dev.sobue.slide.MarkdownSlideApplication</mainClass>
                            <buildArgs>
                                <!-- optionak optimization flag to reduce the footprint. -->
                                <buildArg>-Dspring.native.remove-yaml-support=true</buildArg>
                                <buildArg>-Dspring.spel.ignore=true</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>native-image</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
